1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* analysis.h: Add CREATABLE tags to all non-abstract protocols.

1999-02-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, REVISION, AGE): No changes.  Version 1.4.1.

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* EZBin.[hm], defobj.h ([EZBin -getCount]): Change return to
	unsigned.

	* defobj.h (Analysis): Change -getCount return to unsigned.

1999-01-16  Alex Lancaster  <alex@santafe.edu>

	* analysis.h ([EZGraph -setFileName:]): Update method
	documentation.

	* EZGraph.m (sequence_graph_filename): Add static function to
	generate the filename for the EZGraph in batch mode.  If the
	fileName iVar is *not* set, don't prepend it to the SEQUENCENAME.
	([EZGraph
	-createGraphSequence:forSequence:withFeedFrom:andSelector:]): Use
	it.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* EZBin.m ([EZBin -createEnd]): Use setColors:count: instead
	of setColors:.

1998-12-28  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Averager.[hm] ([Averager -getCount]): Return unsigned.
	
1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* EZBin.m: Include misc.h instead of math.h.

1998-12-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* EZGraph.m: Include misc.h.
	 ([EZGraph -createGraphSequence:forSequence:withFeedFrom:andSelector:]):
	Prepend filename to ".SEQUENCENAME".

	* EZBin.[hm], EZGraph.[hm]: Add filename and accessors.  Rename
	theTitle to title.  Default filename to title in setTitle.

	* analysis.h (EZBin, EZGraph): Declare getFilename and setFilename:.
	Add getTitle.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Swarm 1.3.1 released.

1998-09-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
