@@ -3,11 +3,12 @@
 // implied warranty of merchantability or fitness for a particular purpose.
 // See file LICENSE for details and terms of copying.
 
+#import <analysis.h> // ActiveOutFile
 #import <objectbase/MessageProbe.h>
 
 // An object that fetches its data, and writes it into a file
 
-@interface ActiveOutFile: MessageProbe
+@interface ActiveOutFile: MessageProbe <ActiveOutFile>
 {
   id theFile;
   id dataFeed;
