@@ -1,7 +1,13 @@
+// Swarm library. Copyright (C) 1996-1999 Santa Fe Institute.
+// This library is distributed without any warranty; without even the
+// implied warranty of merchantability or fitness for a particular purpose.
+// See file LICENSE for details and terms of copying.
+
+#import <analysis.h> // FunctionGraph
 #import <gui.h>
 #import <objectbase/SwarmObject.h>
 
-@interface FunctionGraph: SwarmObject
+@interface FunctionGraph: SwarmObject <FunctionGraph>
 {
    double minX;
    double maxX;
