@@ -1,3 +1,10 @@
+1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* ActiveGraph.[hm], ActiveOutFile.[hm], Averager.[hm], EZBin.h,
+	EZDistribution.h, EZGraph.h, Entropy.[hm], FunctionGraph.[hm]:
+	Add protocol compliance tags to @interfaces.  Reorganize
+	phase stuff as necessary.
+
 1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* Makefile.am (INCLUDES): Add -I for libobjc.
